# reproducible_pca_project_gretsi

./: README.md  figure_1.py  figure_2.py  figure_5.py  pyproject.toml  repro.ipynb
